--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,32 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script> -->
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script> -->
+
+<script>
+  // Your web app's Firebase configuration
+  // const firebaseConfig = {
+  //   apiKey: "AIzaSyCvUM_cRxpUTglNwMUcIFQdVsTtfLzIBtw",
+  //   authDomain: "gigrum-6bd12.firebaseapp.com",
+  //   databaseURL: "https://gigrum-6bd12.firebaseio.com",
+  //   projectId: "gigrum-6bd12",
+  //   storageBucket: "",
+  //   messagingSenderId: "525258845420",
+  //   appId: "1:525258845420:web:635bceff56889f8ce949c9",
+  //   measurementId: "G-4GNMQ0XZDM"
+  // };
+  // // Initialize Firebase
+  // firebase.initializeApp(firebaseConfig);
+  // firebase.analytics();
+
+
+</script>
 </body>
 </html>
