--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>GigrumApp</title>
@@ -7,39 +8,27 @@
   <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900&display=swap&subset=cyrillic,cyrillic-ext"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script> -->
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script> -->
 
-<script>
-  // Your web app's Firebase configuration
-  // const firebaseConfig = {
-  //   apiKey: "AIzaSyCvUM_cRxpUTglNwMUcIFQdVsTtfLzIBtw",
-  //   authDomain: "gigrum-6bd12.firebaseapp.com",
-  //   databaseURL: "https://gigrum-6bd12.firebaseio.com",
-  //   projectId: "gigrum-6bd12",
-  //   storageBucket: "",
-  //   messagingSenderId: "525258845420",
-  //   appId: "1:525258845420:web:635bceff56889f8ce949c9",
-  //   measurementId: "G-4GNMQ0XZDM"
-  // };
-  // // Initialize Firebase
-  // firebase.initializeApp(firebaseConfig);
-  // firebase.analytics();
-
-
-</script>
+  <script id="widget-wfp-script" language="javascript" type="text/javascript"
+    src="https://secure.wayforpay.com/server/pay-widget.js"></script>
 </body>
+
 </html>
